Logistic Regression Training

--- a/notebooks/telco_customer_churn_model_training.ipynb
+++ b/notebooks/telco_customer_churn_model_training.ipynb
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.675968Z",
-     "start_time": "2024-05-28T09:39:38.868013Z"
+     "end_time": "2024-05-28T09:55:39.137900Z",
+     "start_time": "2024-05-28T09:55:37.965966Z"
     }
    },
    "cell_type": "code",
@@ -66,8 +66,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.683020Z",
-     "start_time": "2024-05-28T09:39:39.678820Z"
+     "end_time": "2024-05-28T09:55:39.145645Z",
+     "start_time": "2024-05-28T09:55:39.140895Z"
     }
    },
    "cell_type": "code",
@@ -96,8 +96,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.690154Z",
-     "start_time": "2024-05-28T09:39:39.686113Z"
+     "end_time": "2024-05-28T09:55:39.151523Z",
+     "start_time": "2024-05-28T09:55:39.147823Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.705882Z",
-     "start_time": "2024-05-28T09:39:39.694296Z"
+     "end_time": "2024-05-28T09:55:39.169917Z",
+     "start_time": "2024-05-28T09:55:39.156257Z"
     }
    },
    "cell_type": "code",
@@ -145,10 +145,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[05/28/2024 11:39:39 - general_utils] INFO - read_configuration - Start\n",
-      "[05/28/2024 11:39:39 - general_utils] INFO - read_configuration - Reading /Users/s.porreca/Projects/customer_churn_predictor/configuration/config.yaml\n",
-      "[05/28/2024 11:39:39 - general_utils] INFO - read_configuration - Configuration file /Users/s.porreca/Projects/customer_churn_predictor/configuration/config.yaml read successfully\n",
-      "[05/28/2024 11:39:39 - general_utils] INFO - read_configuration - End\n"
+      "[05/28/2024 11:55:39 - general_utils] INFO - read_configuration - Start\n",
+      "[05/28/2024 11:55:39 - general_utils] INFO - read_configuration - Reading /Users/s.porreca/Projects/customer_churn_predictor/configuration/config.yaml\n",
+      "[05/28/2024 11:55:39 - general_utils] INFO - read_configuration - Configuration file /Users/s.porreca/Projects/customer_churn_predictor/configuration/config.yaml read successfully\n",
+      "[05/28/2024 11:55:39 - general_utils] INFO - read_configuration - End\n"
      ]
     }
    ],
@@ -163,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.735457Z",
-     "start_time": "2024-05-28T09:39:39.707731Z"
+     "end_time": "2024-05-28T09:55:39.200829Z",
+     "start_time": "2024-05-28T09:55:39.171813Z"
     }
    },
    "cell_type": "code",
@@ -191,8 +191,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.743363Z",
-     "start_time": "2024-05-28T09:39:39.737263Z"
+     "end_time": "2024-05-28T09:55:39.209606Z",
+     "start_time": "2024-05-28T09:55:39.202340Z"
     }
    },
    "cell_type": "code",
@@ -251,8 +251,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.752511Z",
-     "start_time": "2024-05-28T09:39:39.745165Z"
+     "end_time": "2024-05-28T09:55:39.222093Z",
+     "start_time": "2024-05-28T09:55:39.211377Z"
     }
    },
    "cell_type": "code",
@@ -267,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - __init__ - Initialise object attributes\n"
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - __init__ - Initialise object attributes\n"
      ]
     }
    ],
@@ -276,8 +276,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.767655Z",
-     "start_time": "2024-05-28T09:39:39.753729Z"
+     "end_time": "2024-05-28T09:55:39.241172Z",
+     "start_time": "2024-05-28T09:55:39.223700Z"
     }
    },
    "cell_type": "code",
@@ -291,23 +291,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Start\n",
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Build the Numerical Data Pipeline\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Start\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Building steps\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Skipping Feature Engineering step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Adding SimpleImputer Imputation step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Adding MinMaxScaler Standardisation step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Skipping Normalization step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - End\n",
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Build the Categorical Data Pipeline\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Start\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Building steps\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Adding SimpleImputer Imputation step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Adding OneHotEncoder One-hot Encoding step\n",
-      "[05/28/2024 11:39:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - End\n",
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Bundle the data pipeline\n",
-      "[05/28/2024 11:39:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - End\n"
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Start\n",
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Build the Numerical Data Pipeline\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Start\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Building steps\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Skipping Feature Engineering step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Adding SimpleImputer Imputation step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Adding MinMaxScaler Standardisation step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - Skipping Normalization step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_numerical_data_pipeline_steps - End\n",
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Build the Categorical Data Pipeline\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Start\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Building steps\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Adding SimpleImputer Imputation step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - Adding OneHotEncoder One-hot Encoding step\n",
+      "[05/28/2024 11:55:39 - data_preparation_utils] INFO - build_categorical_data_pipeline_steps - End\n",
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - Bundle the data pipeline\n",
+      "[05/28/2024 11:55:39 - CustomerChurnDataPreparation] INFO - build_training_data_preparation_pipeline - End\n"
      ]
     }
    ],
@@ -316,8 +316,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.796704Z",
-     "start_time": "2024-05-28T09:39:39.768818Z"
+     "end_time": "2024-05-28T09:55:39.277411Z",
+     "start_time": "2024-05-28T09:55:39.243535Z"
     }
    },
    "cell_type": "code",
@@ -817,8 +817,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.806143Z",
-     "start_time": "2024-05-28T09:39:39.801142Z"
+     "end_time": "2024-05-28T09:55:39.288969Z",
+     "start_time": "2024-05-28T09:55:39.282741Z"
     }
    },
    "cell_type": "code",
@@ -833,8 +833,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.813566Z",
-     "start_time": "2024-05-28T09:39:39.808656Z"
+     "end_time": "2024-05-28T09:55:39.295903Z",
+     "start_time": "2024-05-28T09:55:39.291446Z"
     }
    },
    "cell_type": "code",
@@ -855,8 +855,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.821232Z",
-     "start_time": "2024-05-28T09:39:39.816321Z"
+     "end_time": "2024-05-28T09:55:39.305097Z",
+     "start_time": "2024-05-28T09:55:39.298632Z"
     }
    },
    "cell_type": "code",
@@ -878,8 +878,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.829190Z",
-     "start_time": "2024-05-28T09:39:39.823147Z"
+     "end_time": "2024-05-28T09:55:39.312738Z",
+     "start_time": "2024-05-28T09:55:39.307185Z"
     }
    },
    "cell_type": "code",
@@ -895,8 +895,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.835167Z",
-     "start_time": "2024-05-28T09:39:39.830658Z"
+     "end_time": "2024-05-28T09:55:39.317691Z",
+     "start_time": "2024-05-28T09:55:39.314373Z"
     }
    },
    "cell_type": "code",
@@ -912,8 +912,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.848491Z",
-     "start_time": "2024-05-28T09:39:39.837464Z"
+     "end_time": "2024-05-28T09:55:39.330487Z",
+     "start_time": "2024-05-28T09:55:39.320834Z"
     }
    },
    "cell_type": "code",
@@ -948,8 +948,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.866051Z",
-     "start_time": "2024-05-28T09:39:39.850237Z"
+     "end_time": "2024-05-28T09:55:39.353515Z",
+     "start_time": "2024-05-28T09:55:39.332164Z"
     }
    },
    "cell_type": "code",
@@ -978,8 +978,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.871313Z",
-     "start_time": "2024-05-28T09:39:39.867398Z"
+     "end_time": "2024-05-28T09:55:39.365473Z",
+     "start_time": "2024-05-28T09:55:39.355752Z"
     }
    },
    "cell_type": "code",
@@ -1003,8 +1003,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-28T09:39:39.883816Z",
-     "start_time": "2024-05-28T09:39:39.873123Z"
+     "end_time": "2024-05-28T09:55:39.408658Z",
+     "start_time": "2024-05-28T09:55:39.387730Z"
     }
    },
    "cell_type": "code",
@@ -1013,7 +1013,7 @@
     "model_lr = LogisticRegression()\n",
     "\n",
     "# Create a ModelTrainer\n",
-    "model_trainer_lr = ModelTrainer(model_name=model_training_config['linear_regression']['model_name'], \n",
+    "model_trainer_lr = ModelTrainer(model_name=model_training_config['logistic_regression']['model_name'], \n",
     "                                model=model_lr, \n",
     "                                data_pipeline=data_preparation_pipeline)"
    ],
@@ -1023,7 +1023,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[05/28/2024 11:39:39 - ModelTrainer] INFO - __init__ - Initialise object attributes\n"
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - __init__ - Initialise object attributes\n"
      ]
     }
    ],
@@ -1031,17 +1031,15 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-05-28T09:39:39.885249Z"
+     "end_time": "2024-05-28T09:55:42.687675Z",
+     "start_time": "2024-05-28T09:55:39.412569Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Start an MLflow run\n",
-    "with mlflow.start_run(run_name=model_training_config['linear_regression']['mlflow_run_name']):\n",
+    "with mlflow.start_run(run_name=model_training_config['logistic_regression']['mlflow_run_name']):\n",
     "    \n",
     "    print(f'MLflow Run ID: {mlflow.active_run().info.run_id}\\n')\n",
     "\n",
@@ -1065,7 +1063,7 @@
     "    model_info = mlflow.sklearn.log_model(\n",
     "        sk_model=model_trainer_lr.pipeline,\n",
     "        artifact_path='model_artifacts',\n",
-    "        registered_model_name=model_training_config['linear_regression']['mlflow_run_name']\n",
+    "        registered_model_name=model_training_config['logistic_regression']['mlflow_run_name']\n",
     "    )"
    ],
    "id": "737c7726027ef447",
@@ -1074,29 +1072,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLflow Run ID: d345e1e599c0487a9c217ce87d6f767b\n",
+      "MLflow Run ID: 16c504d8a91949d8bd4a06c4cb9b0eb4\n",
       "\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - bundle_and_fit_pipeline - Start\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - bundle_and_fit_pipeline - Bundle the pipeline\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - bundle_and_fit_pipeline - Fit the pipeline\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - bundle_and_fit_pipeline - End\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - evaluate_pipeline - Start\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - evaluate_pipeline - Compute predictions\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - evaluate_pipeline - Evaluate pipeline\n",
-      "[05/28/2024 11:39:40 - model_training_utils] INFO - compute_classification_metrics - Start\n",
-      "[05/28/2024 11:39:40 - model_training_utils] INFO - compute_classification_metrics - Computed metrics\n",
-      "[05/28/2024 11:39:40 - model_training_utils] INFO -            Value\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - bundle_and_fit_pipeline - Start\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - bundle_and_fit_pipeline - Bundle the pipeline\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - bundle_and_fit_pipeline - Fit the pipeline\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - bundle_and_fit_pipeline - End\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - evaluate_pipeline - Start\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - evaluate_pipeline - Compute predictions\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - evaluate_pipeline - Evaluate pipeline\n",
+      "[05/28/2024 11:55:39 - model_training_utils] INFO - compute_classification_metrics - Start\n",
+      "[05/28/2024 11:55:39 - model_training_utils] INFO - compute_classification_metrics - Computed metrics\n",
+      "[05/28/2024 11:55:39 - model_training_utils] INFO -            Value\n",
       "Accuracy    0.79\n",
       "Precision   0.64\n",
       "Recall      0.51\n",
       "F1 Score    0.57\n",
       "ROC AUC     0.83\n",
-      "[05/28/2024 11:39:40 - model_training_utils] INFO - compute_classification_metrics - End\n",
-      "[05/28/2024 11:39:40 - ModelTrainer] INFO - evaluate_pipeline - End\n"
+      "[05/28/2024 11:55:39 - model_training_utils] INFO - compute_classification_metrics - End\n",
+      "[05/28/2024 11:55:39 - ModelTrainer] INFO - evaluate_pipeline - End\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'Logistic Regression'.\n",
+      "Created version '1' of model 'Logistic Regression'.\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T09:56:01.908897Z",
+     "start_time": "2024-05-28T09:56:01.904417Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Update performance dataframe for Model Explainability\n",
+    "performance.loc[model_training_config['logistic_regression']['mlflow_run_name']] = evaluation.Value.values\n",
+    "\n",
+    "# Update models dataframe for Model Explainability\n",
+    "models[model_training_config['logistic_regression']['model_name']] = model_trainer_lr.pipeline"
+   ],
+   "id": "1e455cf6b9d292db",
+   "outputs": [],
+   "execution_count": 21
   }
  ],
  "metadata": {
